--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -48,7 +48,7 @@ jobs:
     displayName: Build System.Reactive.sln
     inputs:
       solution: Rx.NET/Source/System.Reactive.sln    
-      msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
+      msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts /bl:$(Build.ArtifactStagingDirectory)\artifacts\build.binlog
       platform: $(BuildPlatform)
       configuration: $(BuildConfiguration)
       maximumCpuCount: true
@@ -82,9 +82,6 @@ jobs:
       arguments: -c $(BuildConfiguration) --no-build --no-restore 
     displayName: Run Api Approvals Tests
 
-  - task: whitesource.ws-bolt.bolt.wss.WhiteSource Bolt@18
-    displayName: 'WhiteSource Bolt'
-    enabled: false
     
   - task: PowerShell@2
     displayName: Authenticode Sign Packages
@@ -101,6 +98,7 @@ jobs:
       PathtoPublish: $(Build.ArtifactStagingDirectory)\artifacts
       ArtifactName: artifacts
       publishLocation: Container
+    condition: always()
 
 - job: Linux_Test
   dependsOn: Build
