--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -44,6 +44,9 @@ jobs:
   - script: nbgv cloud -a -p Rx.NET/Source
     displayName: Set Version
 
+  - powershell: iex ((New-Object System.Net.WebClient).DownloadString('https://raw.githubusercontent.com/onovotny/UpdateVsOnAgent/master/Fix-VisualStudioPreviewNuGetSdk.ps1'))
+    displayName: VS Preview workaround
+
   - task: MSBuild@1
     displayName: Build System.Reactive.sln
     inputs:
