--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -114,7 +114,7 @@ jobs:
   steps:
   - task: DotNetCoreInstaller@0
     inputs:
-      version: '2.2.103'
+      version: '2.2.104'
 
   - task: DotNetCoreCLI@2  
     inputs:
@@ -128,7 +128,7 @@ jobs:
 
   - task: DotNetCoreInstaller@0
     inputs:
-      version: '3.0.100-preview-010184'
+      version: '3.0.100-preview4-010374'
 
   - task: DownloadBuildArtifacts@0
     displayName: 'Download Build Artifacts'
