--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -102,7 +102,7 @@ jobs:
       publishLocation: Container
     condition: always()
 
-- job: Linux_Test
+- job: Integration_Linux_Tests
   dependsOn: Build
   pool:
     vmImage: ubuntu-16.04
@@ -179,3 +179,66 @@ jobs:
       projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LinuxTests/LinuxTests.csproj
       arguments: -c $(BuildConfiguration) -f netcoreapp2.1 /p:TargetFrameworks=netcoreapp2.1
     displayName: Run 2.1 Tests on Linux
+
+- job: Integration_WindowsDesktop_Tests
+  dependsOn: Build
+  pool:
+    vmImage: windows-2019
+  
+  variables: 
+    BuildConfiguration: Release
+    BuildPlatform: Any CPU
+  
+  steps:  
+  - task: DotNetCoreInstaller@0
+    inputs:
+      version: '3.0.100-preview4-010374'
+
+  - task: DotNetCoreCLI@2  
+    inputs:
+      command: custom
+      custom: tool
+      arguments: install --tool-path . nbgv
+    displayName: Install NBGV tool
+
+  - script: ./nbgv cloud -a -p Rx.NET/Source
+    displayName: Set Version
+
+  - task: DownloadBuildArtifacts@0
+    displayName: 'Download Build Artifacts'
+    inputs:
+      artifactName: artifacts
+      downloadPath: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+      
+  - powershell: mv $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages/artifacts/*.* $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+
+  - task: DotNetCoreCLI@2
+    displayName: Update Rx
+    inputs:
+      command: custom
+      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+      custom: add
+      arguments: package System.Reactive -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+
+  - task: DotNetCoreCLI@2
+    displayName: Update Aliases
+    inputs:
+      command: custom
+      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+      custom: add
+      arguments: package System.Reactive.Observable.Aliases -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+
+  - task: DotNetCoreCLI@2
+    displayName: Update Testing
+    inputs:
+      command: custom
+      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+      custom: add
+      arguments: package Microsoft.Reactive.Testing -v $(NBGV_NuGetPackageVersion) -s $(System.DefaultWorkingDirectory)/Rx.NET/Integration/LocalPackages
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: test
+      projects: $(System.DefaultWorkingDirectory)/Rx.NET/Integration/WindowsDesktopTests/WindowsDesktopTests.csproj
+      arguments: -c $(BuildConfiguration) 
+    displayName: Run 3.0 Tests on WindowDesktop
