--- a/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
+++ b/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
@@ -81,8 +81,8 @@
 
 
   <ItemGroup>
-    <None Include="bin\$(Configuration)\netcoreapp3.0\*.xml" PackagePath="payload\netcoreapp3.0" Pack="true" />
-    <None Include="bin\$(Configuration)\netcoreapp3.0\*.dll" PackagePath="payload\netcoreapp3.0" Pack="true" />
+    <None Include="bin\$(Configuration)\netcoreapp3.0\*.xml" PackagePath="build\netcoreapp3.0" Pack="true" />
+    <None Include="bin\$(Configuration)\netcoreapp3.0\*.dll" PackagePath="build\netcoreapp3.0" Pack="true" />
     <None Include="build\_._" PackagePath="lib\netcoreapp3.0" Pack="true" />
     <None Include="build\System.Reactive.targets" PackagePath="buildTransitive\netcoreapp3.0" Pack="true" />
     <None Include="build\System.Reactive.targets" PackagePath="build\netcoreapp3.0" Pack="true" />
