--- a/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
+++ b/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
@@ -72,17 +72,17 @@
   <!-- We remove the output from the nuget so it doesn't wind up in the \lib folder -->
   <Target Name="RemoveNetCoreApp3FromNuGet" DependsOnTargets="BuiltProjectOutputGroup;DocumentationProjectOutputGroup" Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
 
-    <ItemGroup>
+    <ItemGroup>      
+      <!-- Before clearing the output groups, add them to None for packing -->
+      <None Include="@(BuiltProjectOutputGroupOutput);@(DocumentationProjectOutputGroupOutput)" PackagePath="build\netcoreapp3.0" Pack="true" />      
+      
       <BuiltProjectOutputGroupOutput Remove="@(BuiltProjectOutputGroupOutput)" />
-      <DocumentationProjectOutputGroupOutput Remove="@(DocumentationProjectOutputGroupOutput)" />
+      <DocumentationProjectOutputGroupOutput Remove="@(DocumentationProjectOutputGroupOutput)" />      
     </ItemGroup>
 
   </Target>
-
-
+  
   <ItemGroup>
-    <None Include="bin\$(Configuration)\netcoreapp3.0\*.xml" PackagePath="build\netcoreapp3.0" Pack="true" />
-    <None Include="bin\$(Configuration)\netcoreapp3.0\*.dll" PackagePath="build\netcoreapp3.0" Pack="true" />
     <None Include="build\_._" PackagePath="lib\netcoreapp3.0" Pack="true" />
     <None Include="build\System.Reactive.targets" PackagePath="buildTransitive\netcoreapp3.0" Pack="true" />
     <None Include="build\System.Reactive.targets" PackagePath="build\netcoreapp3.0" Pack="true" />
