--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -35,7 +35,7 @@ stages:
     steps:
     - task: UseDotNet@2
       inputs:
-        version: '3.1.300'
+        version: '3.1.300-preview-015048'
         performMultiLevelLookup: true
         includePreviewVersions: true
 
