--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -33,7 +33,7 @@ stages:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
 
     steps:
-    - task: UseDotNet@1
+    - task: DotNetCoreInstaller@1
       inputs:
         version: '3.1.300-preview-015048'
         performMultiLevelLookup: true
