--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -100,6 +100,11 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)\artifacts
       displayName: Publish artifacts
       artifact: BuildPackages
+    
+    - publish: Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Api/*.received.cs
+      displayName: Publish test artifiacts
+      artifact: ApprovalsTests
+      condition: always()
 
   - job: Integration_Linux_Tests
     dependsOn: Build
