--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -83,7 +83,7 @@ stages:
         projects: Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
         arguments: -c $(BuildConfiguration) --no-build --no-restore
       displayName: Run Api Approvals Tests
-      condition: never()
+      enabled: false
 
     - script: reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/Rx.NET/Source/coverlet/reports -reporttypes:"Cobertura"
       displayName: Create reports
