--- a/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+++ b/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
@@ -1,17 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net48</TargetFrameworks>
     <NoWarn>$(NoWarn);CS0618</NoWarn>
-    <DebugType>full</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-    <Optimize>false</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Api\*.approved.cs" />    
-    <Compile Remove="Api\*.received.cs" />    
-    <None Include="Api\*.approved.cs" />
+    <Compile Remove="Api\*.verified.cs" />
+    <Compile Remove="Api\*.received.cs" />
+    <None Include="Api\*.verified.cs" />
     <None Include="Api\*.received.cs" />
   </ItemGroup>
 
@@ -29,9 +26,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Verify.Xunit" Version="1.26.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
-    <PackageReference Include="ApprovalTests" Version="4.5.1" />
     <PackageReference Include="DiffPlex" Version="1.5.0" />
     <PackageReference Include="PublicApiGenerator" Version="10.0.2" />
   </ItemGroup>
